notice z-index bug

--- a/daumeditor/css/trex/editor/plugin.css
+++ b/daumeditor/css/trex/editor/plugin.css
@@ -27,7 +27,7 @@
 	}
 
 /*==== noticebox ====*/
-	.tx-canvas-notice{ width:100%; height:100%; z-index:200000; position:absolute; color:#000000;font-size:15px;}
+	.tx-canvas-notice{ width:100%; height:100%; z-index:20000; position:absolute; color:#000000;font-size:15px;}
 	.tx-canvas-notice span{ vertical-align:middle;margin-top:150px;  }
 	.tx-canvas-notice a{ text-decoration:underline; margin-top:150px; cursor: pointer}
 	
